# text-shapes

./: CMakeLists.txt  conanfile.txt  main.cpp
src/: canvas.h  common.h  shapes.h  texture.h
